Cambio De Formato
Cambio de index.php a index.html

--- a/gal.html
+++ b/gal.html
@@ -45,7 +45,7 @@
 			</header>
 			<nav>
 			<ul>
-	  			<li><a  href="index.php"> Pagina Principal</a></li>
+	  			<li><a  href="index.html"> Pagina Principal</a></li>
 	  			<li><a class="activa" href="gal.html">Galeria</a></li>
 	  			
 			</ul>
