--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</header>
 			<nav>
 			<ul>
-	  			<li><a class="activa" href="index.php"> Pagina Principal</a></li>
+	  			<li><a class="activa" href="index.html"> Pagina Principal</a></li>
 	  			<li><a href="gal.html">Galeria</a></li>
 	  			<li><a href="">               </a></li>
 			</ul>
