Cambios de Banner
Cambios de baner y configuracion de paginas .

--- a/gal.html
+++ b/gal.html
@@ -11,12 +11,13 @@
 			}
 	header
 	{
-		background-image: url(img/baner.jpg);
+		background-image: url(img/bannerasd.jpg);
 	}
 	h1
 	{
 		font-family: hola;
 		font-size: 80px;
+		color: transparent;
 	}
 	img 
 	{
@@ -47,7 +48,7 @@
 			<ul>
 	  			<li><a  href="index.html"> Pagina Principal</a></li>
 	  			<li><a class="activa" href="gal.html">Galeria</a></li>
-	  			
+	  			<li><a href=""> Inicio Seccion </a></li>
 			</ul>
 			</nav>
 			<section >
