--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	}
 	header
 	{
-		background-image: url(img/baner.jpg);
+		background-image: url(img/bannerasd.jpg);
 	}
 	h1
 	{
 		font-family: hola;
 		font-size: 80px;
+		color: transparent;
 	}
 	h2
 	{
@@ -45,15 +46,12 @@
 			<ul>
 	  			<li><a class="activa" href="index.html"> Pagina Principal</a></li>
 	  			<li><a href="gal.html">Galeria</a></li>
-	  			<li><a href="">               </a></li>
+	  			<li><a href=""> Inicio Seccion </a></li>
 			</ul>
 			</nav>
 			<section >
 			<h2 style="text-align:left;">Mejores Memes</h2>
 			<p> </p>
 			</section>
-			<aside>
-				Login
-			</aside>
 		</body>
 	</html>
