Cambios en Paginas
Se agrega Pagina php inicio seccion y modificaciones en cuanto al css y en index

--- a/gal.html
+++ b/gal.html
@@ -1,6 +1,7 @@
 	<!DOCTYPE html>
 	<html>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<style type="text/css">
@@ -9,10 +10,6 @@
 				font-family: "hola";
 				src:url("fuente/hola.ttf");
 			}
-	header
-	{
-		background-image: url(img/bannerasd.jpg);
-	}
 	h1
 	{
 		font-family: hola;
@@ -48,7 +45,7 @@
 			<ul>
 	  			<li><a  href="index.html"> Pagina Principal</a></li>
 	  			<li><a class="activa" href="gal.html">Galeria</a></li>
-	  			<li><a href=""> Inicio Seccion </a></li>
+	  			<li><a href="inicio_seccion.php"> Inicio Seccion </a></li>
 			</ul>
 			</nav>
 			<section >
