Cambios en Pagina

--- a/gal.html
+++ b/gal.html
@@ -18,7 +18,7 @@
 	}
 	img 
 	{
-		margin-left: 600px;
+		margin-left: 200px;
 		border: 5px solid black;
 		line-height: 20px;
 	}
@@ -30,7 +30,7 @@
 	}	
 	h2
 	{
-		margin-left: 700px;
+		margin-left: 500px;
 		font-size: 60px;
 		font-family: fantasy;
 	}
@@ -62,5 +62,8 @@
 			<hr>
 			<img src="img/meme6.jpg" alt="" style="width: 500px;s">
 			</section>
+            <aside id="aside_1">
+                TOP
+            </aside>
 		</body>
 	</html>
