--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
 			</ul>
 			</nav>
 			<section >
-			<h2 style="text-align:left;">Mejores Memes</h2>
+			<h2 style="text-align:left;">MEJORES MEMES</h2>
 			<p> </p>
-			</section>
+			</section >
+                
+            <aside id="aside_1">
+                TOP
+            </aside>
+        
 		</body>
 	</html>
