--- a/gal.html
+++ b/gal.html
@@ -18,19 +18,14 @@
 	}
 	img 
 	{
-		margin-left: 200px;
+		margin-left: 20%;
 		border: 5px solid black;
-		line-height: 20px;
+		line-height: 20%;
 	}
-	hr
-	{
-		height:  10px;
-		width: 900px;
-		background-color: black;
-	}	
+
 	h2
 	{
-		margin-left: 500px;
+		margin-left: 20%;
 		font-size: 60px;
 		font-family: fantasy;
 	}
@@ -45,7 +40,7 @@
 			<ul>
 	  			<li><a  href="index.html"> Pagina Principal</a></li>
 	  			<li><a class="activa" href="gal.html">Galeria</a></li>
-	  			<li><a href="inicio_seccion.php"> Inicio Seccion </a></li>
+	  			<li><a href="inicio_seccion.html"> Inicio Seccion </a></li>
 			</ul>
 			</nav>
 			<section >
@@ -62,8 +57,5 @@
 			<hr>
 			<img src="img/meme6.jpg" alt="" style="width: 500px;s">
 			</section>
-            <aside id="aside_1">
-                TOP
-            </aside>
 		</body>
 	</html>
