--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<ul>
 	  			<li><a class="activa" href="index.html"> Pagina Principal</a></li>
 	  			<li><a href="gal.html">Galeria</a></li>
-	  			<li><a href="inicio_seccion.php"> Inicio Seccion </a></li>
+	  			<li><a href="inicio_seccion.html"> Inicio Seccion </a></li>
 			</ul>
 			</nav>
 			<section >
