Agregado boton de Like y comentar a galeria

--- a/gal.html
+++ b/gal.html
@@ -29,6 +29,14 @@
 		font-size: 60px;
 		font-family: fantasy;
 	}
+	button
+		{
+			margin-left: 20%;
+			border-left-style: groove;
+			font-family: fantasy;
+			font-size: 30px;
+			
+		}
 	</style>
 	<title>Meme Search</title>
 	</head> 
@@ -45,17 +53,23 @@
 			</nav>
 			<section >
 			<h2 style="text-align:left;">Memes</h2>
-			<img src="img/meme1.jpg" alt="">
+			<img src="img/meme1.jpg" alt=""><br>
+			<button> Like</button> <button>Comentar</button>
 			<hr>
-			<img src="img/meme2.jpg" alt="" style="width: 500px;">
+			<img src="img/meme2.jpg" alt="" style="width: 500px;"><br>
+			<button> Like</button> <button>Comentar</button>
 			<hr>
-			<img src="img/meme3.jpg" alt="" style="width: 500px;">
+			<img src="img/meme3.jpg" alt="" style="width: 500px;"><br>
+			<button> Like</button> <button>Comentar</button>
 			<hr>
-			<img src="img/meme4.jpg" alt="" style="width: 500px;s">
+			<img src="img/meme4.jpg" alt="" style="width: 500px;s"><br>
+			<button> Like</button> <button>Comentar</button>
 			<hr>
-			<img src="img/meme5.jpg" alt="" style="width: 500px;s">
+			<img src="img/meme5.jpg" alt="" style="width: 500px;s"><br>
+			<button> Like</button> <button>Comentar</button>
 			<hr>
-			<img src="img/meme6.jpg" alt="" style="width: 500px;s">
+			<img src="img/meme6.jpg" alt="" style="width: 500px;s"><br>
+			<button> Like</button> <button>Comentar</button>
 			</section>
 		</body>
 	</html>
