--- a/registrarse.html
+++ b/registrarse.html
@@ -8,6 +8,10 @@
     <body>
         <form onsubmit="validaForm()" method="get" action="conexion.php" >
             <h1> Registrarse </h1>
+            Nombre:<br>
+            <input type="text" id="nombre" name="nombre" /><br>
+            Apellido:<br>
+            <input type="text" id="apellido" name="apellido" /><br>
             Usuario: <br>
             <input type="text" id="usuario" name="usuario" /><br>
             Clave: <br>
