thumbnail de la pestaña añadido(no es el final)

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 	<html lang="es">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> 
+	<link href="img\MS.png" rel="shortcut icon" type="image/png">
 	<head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<style type="text/css">
 	@font-face
 	{
-		font-family: "hola";
-		src:url("fuente/hola.ttf");
+		font-family: 'Bangers', cursive;
 	}
 	h1
 	{
-		font-family: hola;
 		font-size: 80px;
 		color: transparent;
+		font-family: 'Bangers', cursive;
 	}
 	h2
 	{
@@ -22,15 +23,15 @@
 		letter-spacing: 1px;
 		text-decoration: underline;
 		margin-left: 200px;
+		font-family: 'Bangers', cursive;
 	}
 	p
 	{
 		letter-spacing: 1px;
 		margin-right: 400px;
 		margin-left: 200px;
-		font-style: fantasy;	
-
-	}
+		font-family: 'Bangers', cursive;	
+	}		
 
 	</style>
 	<title>Meme Search</title>
@@ -41,9 +42,9 @@
 			</header>
 			<nav>
 			<ul>
-	  			<li><a class="activa" href="index.html"> Pagina Principal</a></li>
-	  			<li><a href="gal.html">Galeria</a></li>
-	  			<li><a href="inicio_seccion.html"> Inicio Seccion </a></li>
+	  			<li><a class="activa" href="index.html"> Página Principal</a></li>
+	  			<li><a href="gal.html">Galería</a></li>
+	  			<li><a href="inicio_seccion.html"> Inicio Sesión </a></li>
 			</ul>
 			</nav>
 			<section >
