--- a/registrarse.html
+++ b/registrarse.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link href="img\MS.png" rel="shortcut icon" type="image/png">
     <head>
         <title>Registro</title>
     </head>
