--- a/gal.html
+++ b/gal.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> 
+	<link href="img\MS.png" rel="shortcut icon" type="image/png">
 	<style type="text/css">
 	@font-face
 			{
@@ -46,9 +48,9 @@
 			</header>
 			<nav>
 			<ul>
-	  			<li><a  href="index.html"> Pagina Principal</a></li>
-	  			<li><a class="activa" href="gal.html">Galeria</a></li>
-	  			<li><a href="inicio_seccion.html"> Inicio Seccion </a></li>
+	  			<li><a  href="index.html"> Página Principal</a></li>
+	  			<li><a class="activa" href="gal.html">Galería</a></li>
+	  			<li><a href="inicio_seccion.html"> Inicio Sesión </a></li>
 			</ul>
 			</nav>
 			<section >
