--- a/inicio_seccion.html
+++ b/inicio_seccion.html
@@ -4,7 +4,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> 
+	<link href="img\MS.png" rel="shortcut icon" type="image/png">
 	<style type="text/css">
+
 	@font-face
 	{
 		font-family: "hola";
@@ -61,9 +64,9 @@
 			</header>
 			<nav>
 			<ul>
-	  			<li><a  href="index.html"> Pagina Principal</a></li>
-	  			<li><a href="gal.html">Galeria</a></li>
-	  			<li><a class="activa" href="inicio_seccion.php"> Inicio Seccion </a></li>
+	  			<li><a  href="index.html"> Página Principal</a></li>
+	  			<li><a href="gal.html">Galería</a></li>
+	  			<li><a class="activa" href="inicio_seccion.php"> Inicio Sesión </a></li>
 			</ul>
 			</nav>
 			<section >
