Personalizacion de cuadro login y fondo registro

--- a/inicio_seccion.html
+++ b/inicio_seccion.html
@@ -3,10 +3,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
+	<link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> 
 	<link href="img\MS.png" rel="shortcut icon" type="image/png">
 	<style type="text/css">
+
 
 	@font-face
 	{
@@ -40,12 +42,12 @@
 			padding-bottom: 5%;
 			padding-left: 10%;
 			padding-right: 10%;
-			background-color:chartreuse;
-			color:black;
+			background-image: url("img/link.jpg");
+			color: purple;
 			margin-left: 15%;
 			margin-right: 40%;
 			margin-top: 5%;
-			font-family: fantasy;
+			font-family: 'Slackey', cursive;
             font-size: 22px;
 			
 		}
@@ -74,7 +76,7 @@
 			<p> </p>
             <!--- Creacion de El Login -->
                 <form>
-                    <h2>Login</h2>
+                    <h2>LOGIN</h2>
                     Usuario:<br>
                     <input type="text" id="usuario" > <br>
                     Clave:<br>
