--- a/registrarse.html
+++ b/registrarse.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link href="img\MS.png" rel="shortcut icon" type="image/png">
+<link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet"> 
     <head>
         <title>Registro</title>
     </head>
