Arreglo A rama Principal

--- a/gal.html
+++ b/gal.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> 
+	<link href="img\MS.png" rel="shortcut icon" type="image/png">
 	<style type="text/css">
 	@font-face
 			{
@@ -29,14 +31,6 @@
 		font-size: 60px;
 		font-family: fantasy;
 	}
-	button
-		{
-			margin-left: 20%;
-			border-left-style: groove;
-			font-family: fantasy;
-			font-size: 30px;
-			
-		}
 	</style>
 	<title>Meme Search</title>
 	</head> 
@@ -46,30 +40,24 @@
 			</header>
 			<nav>
 			<ul>
-	  			<li><a  href="index.html"> Pagina Principal</a></li>
-	  			<li><a class="activa" href="gal.html">Galeria</a></li>
-	  			<li><a href="inicio_seccion.html"> Inicio Seccion </a></li>
+	  			<li><a  href="index.html"> Página Principal</a></li>
+	  			<li><a class="activa" href="gal.html">Galería</a></li>
+	  			<li><a href="inicio_seccion.html"> Inicio Sesión </a></li>
 			</ul>
 			</nav>
 			<section >
 			<h2 style="text-align:left;">Memes</h2>
-			<img src="img/meme1.jpg" alt=""><br>
-			<button> Like</button> <button>Comentar</button>
+			<img src="img/meme1.jpg" alt="">
 			<hr>
-			<img src="img/meme2.jpg" alt="" style="width: 500px;"><br>
-			<button> Like</button> <button>Comentar</button>
+			<img src="img/meme2.jpg" alt="" style="width: 500px;">
 			<hr>
-			<img src="img/meme3.jpg" alt="" style="width: 500px;"><br>
-			<button> Like</button> <button>Comentar</button>
+			<img src="img/meme3.jpg" alt="" style="width: 500px;">
 			<hr>
-			<img src="img/meme4.jpg" alt="" style="width: 500px;s"><br>
-			<button> Like</button> <button>Comentar</button>
+			<img src="img/meme4.jpg" alt="" style="width: 500px;s">
 			<hr>
-			<img src="img/meme5.jpg" alt="" style="width: 500px;s"><br>
-			<button> Like</button> <button>Comentar</button>
+			<img src="img/meme5.jpg" alt="" style="width: 500px;s">
 			<hr>
-			<img src="img/meme6.jpg" alt="" style="width: 500px;s"><br>
-			<button> Like</button> <button>Comentar</button>
+			<img src="img/meme6.jpg" alt="" style="width: 500px;s">
 			</section>
 		</body>
 	</html>
