--- a/inicio_seccion.html
+++ b/inicio_seccion.html
@@ -3,8 +3,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
+	<link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> 
+	<link href="img\MS.png" rel="shortcut icon" type="image/png">
 	<style type="text/css">
+
+
 	@font-face
 	{
 		font-family: "hola";
@@ -37,12 +42,10 @@
 			padding-bottom: 5%;
 			padding-left: 10%;
 			padding-right: 10%;
-			background-color:chartreuse;
-			color:black;
-			margin-left: 15%;
-			margin-right: 40%;
-			margin-top: 5%;
-			font-family: fantasy;
+			background-image: url("img/link.jpg");
+			color: purple;
+			
+			font-family: 'Slackey', cursive;
             font-size: 22px;
 			
 		}
@@ -61,9 +64,9 @@
 			</header>
 			<nav>
 			<ul>
-	  			<li><a  href="index.html"> Pagina Principal</a></li>
-	  			<li><a href="gal.html">Galeria</a></li>
-	  			<li><a class="activa" href="inicio_seccion.php"> Inicio Seccion </a></li>
+	  			<li><a  href="index.html"> Página Principal</a></li>
+	  			<li><a href="gal.html">Galería</a></li>
+	  			<li><a class="activa" href="inicio_seccion.php"> Inicio Sesión </a></li>
 			</ul>
 			</nav>
 			<section >
@@ -71,7 +74,7 @@
 			<p> </p>
             <!--- Creacion de El Login -->
                 <form>
-                    <h2>Login</h2>
+                    <h2>LOGIN</h2>
                     Usuario:<br>
                     <input type="text" id="usuario" > <br>
                     Clave:<br>
