Actualizacion De Algunos Archivos

--- a/inicio_seccion.html
+++ b/inicio_seccion.html
@@ -66,14 +66,14 @@
 			<ul>
 	  			<li><a  href="index.html"> Página Principal</a></li>
 	  			<li><a href="gal.html">Galería</a></li>
-	  			<li><a class="activa" href="inicio_seccion.php"> Inicio Sesión </a></li>
+	  			<li><a class="activa" href="inicio_seccion.html"> Inicio Sesión </a></li>
 			</ul>
 			</nav>
 			<section >
 			
 			<p> </p>
             <!--- Creacion de El Login -->
-                <form>
+                <form action="valida.php" method="get">
                     <h2>LOGIN</h2>
                     Usuario:<br>
                     <input type="text" id="usuario" > <br>
