--- a/registrarse.html
+++ b/registrarse.html
@@ -8,7 +8,7 @@
     <!---- Estilos de esta pagina --->
     <link rel="stylesheet" type="text/css" href="css/main_registrarse.css">
     <body>
-        <form onsubmit="validaForm()" method="get" action="conexion.php" >
+        <form onsubmit="validaForm()" action="conexion.php" method="get">
             <h1> Registrarse </h1>
             Nombre:<br>
             <input type="text" id="nombre" name="nombre" /><br>
@@ -21,7 +21,7 @@
             Correo: <br>
             <input type="text" id="correo" name="correo" /> <br>
             <br>
-            <input type="submit" name="enviar" />  
+            <input type="submit" name="enviar" onclick="validaForm()"/>  
         </form>
         <script type="text/javascript" src="js/java.js"></script>
     </body>
